# pipelines-push-action

./: .gitignore  README.md  action.yaml  pyproject.toml  requirements.txt
.github/workflows/: release.yaml  test.yaml
__fixtures__/: pipeline.yaml
script/: main.py  models.py
src/pipelines_push_action/: errors.py  github_utils.py  main.py  models.py  yaml_utils.py
src/script/: github_utils.py  main.py  models.py  yaml_utils.py
tests/: conftest.py  test_yaml_utils.py
tests/data/: handler.py  pipeline.yaml
